--- a/Hackers/WZPostView.xib
+++ b/Hackers/WZPostView.xib
@@ -4,27 +4,30 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3682.6"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WZPostView"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="BG9-mS-8m6">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="69"/>
+        <view contentMode="scaleToFill" id="BG9-mS-8m6" customClass="WZPostView">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="News Title" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="275" translatesAutoresizingMaskIntoConstraints="NO" id="FMr-D2-oLJ" userLabel="Title">
-                    <rect key="frame" x="35" y="5" width="275" height="21"/>
+                    <rect key="frame" x="35" y="5" width="275" height="20"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="15"/>
                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="shadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="unY-91-Ioe" userLabel="Metadata View">
-                    <rect key="frame" x="35" y="23" width="275" height="36"/>
+                <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" image="unread-badge.png" translatesAutoresizingMaskIntoConstraints="NO" id="ddq-8V-lak" userLabel="Unread badge">
+                    <rect key="frame" x="11" y="27" width="12" height="12"/>
+                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cDc-u0-4hq" userLabel="Metadata View">
+                    <rect key="frame" x="35" y="22" width="275" height="39"/>
                     <subviews>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="domain.com" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pej-IX-rPA" userLabel="Domain">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="domain.com" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IoO-Bx-dc8" userLabel="Domain">
                             <rect key="frame" x="0.0" y="0.0" width="252" height="21"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="21" id="17Q-pf-MF1"/>
-                                <constraint firstAttribute="width" constant="252" id="lY5-V7-bdX"/>
+                                <constraint firstAttribute="width" constant="252" id="kGb-mI-1oe"/>
+                                <constraint firstAttribute="height" constant="21" id="ucX-k5-yWU"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="13"/>
                             <color key="textColor" red="0.31764705879999999" green="0.40000000000000002" blue="0.56862745100000001" alpha="1" colorSpace="deviceRGB"/>
@@ -32,11 +35,11 @@
                             <color key="shadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <size key="shadowOffset" width="0.0" height="0.0"/>
                         </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="10 points by blah" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IX1-w0-l2n" userLabel="Metadata 1">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="10 points by blah" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1H-4o-mDs" userLabel="Metadata 1">
                             <rect key="frame" x="0.0" y="18" width="127" height="21"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="127" id="VSe-KR-gNk"/>
-                                <constraint firstAttribute="height" constant="21" id="gYe-M4-Irr"/>
+                                <constraint firstAttribute="width" constant="127" id="fql-Za-hJz"/>
+                                <constraint firstAttribute="height" constant="21" id="kpY-cX-Tae"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="13"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -44,10 +47,10 @@
                             <color key="shadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <size key="shadowOffset" width="0.0" height="0.0"/>
                         </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="1 hour ago · 10 comments" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IHm-3x-qhK" userLabel="Metadata 2">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="1 hour ago · 10 comments" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Acp-5m-5K2" userLabel="Metadata 2">
                             <rect key="frame" x="135" y="18" width="140" height="21"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="21" id="C7u-fz-ZRA"/>
+                                <constraint firstAttribute="height" constant="21" id="K9k-6t-z9M"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="13"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -58,41 +61,43 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="36" id="22s-KH-CQZ"/>
-                        <constraint firstItem="Pej-IX-rPA" firstAttribute="leading" secondItem="unY-91-Ioe" secondAttribute="leading" id="AkC-7G-17r"/>
-                        <constraint firstItem="IHm-3x-qhK" firstAttribute="top" secondItem="IX1-w0-l2n" secondAttribute="top" id="JzR-Na-7yP"/>
-                        <constraint firstItem="IX1-w0-l2n" firstAttribute="leading" secondItem="unY-91-Ioe" secondAttribute="leading" id="R2H-v4-Qfy"/>
-                        <constraint firstItem="IX1-w0-l2n" firstAttribute="top" secondItem="unY-91-Ioe" secondAttribute="top" constant="18" id="RSG-Ca-eB9"/>
-                        <constraint firstItem="IHm-3x-qhK" firstAttribute="top" secondItem="unY-91-Ioe" secondAttribute="top" constant="18" id="cIv-cZ-V7f"/>
-                        <constraint firstItem="IHm-3x-qhK" firstAttribute="trailing" secondItem="unY-91-Ioe" secondAttribute="trailing" id="eIM-0C-QoD"/>
-                        <constraint firstItem="Pej-IX-rPA" firstAttribute="top" secondItem="unY-91-Ioe" secondAttribute="top" id="syM-3o-LRH"/>
-                        <constraint firstItem="IHm-3x-qhK" firstAttribute="leading" secondItem="IX1-w0-l2n" secondAttribute="trailing" constant="8" symbolic="YES" id="yBv-u1-7CE"/>
+                        <constraint firstItem="IoO-Bx-dc8" firstAttribute="top" secondItem="cDc-u0-4hq" secondAttribute="top" id="8ul-Yh-R2s"/>
+                        <constraint firstItem="Acp-5m-5K2" firstAttribute="leading" secondItem="H1H-4o-mDs" secondAttribute="trailing" constant="8" symbolic="YES" id="Bw2-dc-DiB"/>
+                        <constraint firstItem="Acp-5m-5K2" firstAttribute="top" secondItem="H1H-4o-mDs" secondAttribute="top" id="JLr-h5-G8J"/>
+                        <constraint firstItem="H1H-4o-mDs" firstAttribute="leading" secondItem="cDc-u0-4hq" secondAttribute="leading" id="aMp-dP-jl0"/>
+                        <constraint firstItem="H1H-4o-mDs" firstAttribute="top" secondItem="cDc-u0-4hq" secondAttribute="top" constant="18" id="ggI-HN-Nar"/>
+                        <constraint firstItem="Acp-5m-5K2" firstAttribute="trailing" secondItem="cDc-u0-4hq" secondAttribute="trailing" id="iBt-4N-EFx"/>
+                        <constraint firstItem="IoO-Bx-dc8" firstAttribute="leading" secondItem="cDc-u0-4hq" secondAttribute="leading" id="n7Z-1O-3bt"/>
+                        <constraint firstItem="Acp-5m-5K2" firstAttribute="top" secondItem="cDc-u0-4hq" secondAttribute="top" constant="18" id="ngW-dK-U6P"/>
+                        <constraint firstAttribute="height" constant="36" id="rS5-HZ-wd3"/>
                     </constraints>
                 </view>
-                <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" ambiguous="YES" image="unread-badge.png" translatesAutoresizingMaskIntoConstraints="NO" id="ddq-8V-lak" userLabel="Unread badge">
-                    <rect key="frame" x="11" y="27" width="12" height="12"/>
-                </imageView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="unY-91-Ioe" firstAttribute="leading" secondItem="BG9-mS-8m6" secondAttribute="leading" constant="35" id="6nB-mj-Ytd"/>
                 <constraint firstItem="FMr-D2-oLJ" firstAttribute="top" secondItem="BG9-mS-8m6" secondAttribute="top" constant="5" id="7xJ-Qp-blv"/>
+                <constraint firstAttribute="trailing" secondItem="cDc-u0-4hq" secondAttribute="trailing" constant="10" id="8ZZ-xD-acO"/>
+                <constraint firstItem="cDc-u0-4hq" firstAttribute="leading" secondItem="BG9-mS-8m6" secondAttribute="leading" constant="35" id="Bi5-4j-Ftr"/>
                 <constraint firstAttribute="centerX" secondItem="ddq-8V-lak" secondAttribute="centerX" constant="143" id="MCf-lb-WeM"/>
-                <constraint firstAttribute="bottom" secondItem="unY-91-Ioe" secondAttribute="bottom" constant="10" id="ahJ-HM-7Km"/>
+                <constraint firstAttribute="bottom" secondItem="cDc-u0-4hq" secondAttribute="bottom" constant="8" id="MCk-ck-6i8"/>
+                <constraint firstItem="ddq-8V-lak" firstAttribute="leading" secondItem="BG9-mS-8m6" secondAttribute="leading" constant="11" id="Oaj-MY-Hti"/>
+                <constraint firstItem="ddq-8V-lak" firstAttribute="top" secondItem="BG9-mS-8m6" secondAttribute="top" constant="27" id="Q1C-xm-jf4"/>
                 <constraint firstAttribute="trailing" secondItem="FMr-D2-oLJ" secondAttribute="trailing" constant="10" id="bV5-Dt-RbP"/>
+                <constraint firstItem="FMr-D2-oLJ" firstAttribute="top" secondItem="BG9-mS-8m6" secondAttribute="top" constant="5" id="gFh-am-kB8"/>
                 <constraint firstItem="FMr-D2-oLJ" firstAttribute="leading" secondItem="BG9-mS-8m6" secondAttribute="leading" constant="35" id="jIQ-RH-eXM"/>
-                <constraint firstAttribute="trailing" secondItem="unY-91-Ioe" secondAttribute="trailing" constant="10" id="onu-ih-JSB"/>
                 <constraint firstAttribute="bottom" secondItem="FMr-D2-oLJ" secondAttribute="bottom" constant="43" id="tb9-od-QTY"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="detail1Label" destination="H1H-4o-mDs" id="k6q-ga-kRv"/>
+                <outlet property="detail2Label" destination="Acp-5m-5K2" id="bSq-Jb-L4E"/>
+                <outlet property="domainLabel" destination="IoO-Bx-dc8" id="gp0-1E-FTp"/>
+                <outlet property="readBadgeImageView" destination="ddq-8V-lak" id="L3b-4O-4iy"/>
+                <outlet property="titleLabel" destination="FMr-D2-oLJ" id="nwA-ZQ-600"/>
+            </connections>
         </view>
     </objects>
     <resources>
         <image name="unread-badge.png" width="12" height="12"/>
     </resources>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-    </classes>
 </document>
